// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`vurderingArtikkel13_2b > snapshot test dersom Norge er valgt 1`] = `
<div>
  <div
    class="vurderingArtikkel13_2b"
  >
    <h1
      class="stegvelgertittel navds-heading navds-heading--large"
    >
      Vurdering av artikkel 13 nr. 2 bokstav b
    </h1>
    <fieldset
      class="navds-radio-group navds-radio-group--small navds-fieldset navds-fieldset--small"
    >
      <legend
        class="navds-fieldset__legend navds-label navds-label--small"
      >
        I hvilket land har virksomheten sitt interessesenter?
      </legend>
      <div
        class="navds-radio-buttons"
      >
        <div
          class="navds-radio navds-radio--small"
        >
          <input
            aria-labelledby="rc"
            class="navds-radio__input"
            id="radio-rb"
            name="interessesenter"
            type="radio"
            value="NORGE"
          />
          <label
            class="navds-radio__label"
            for="radio-rb"
          >
            <span
              class="navds-radio__content"
            >
              <span
                aria-hidden="true"
                class="navds-body-short navds-body-short--small"
                id="rc"
              >
                Norge
              </span>
            </span>
          </label>
        </div>
        <div
          class="navds-radio navds-radio--small"
        >
          <input
            aria-labelledby="rf"
            class="navds-radio__input"
            id="radio-re"
            name="interessesenter"
            type="radio"
            value="ANNET"
          />
          <label
            class="navds-radio__label"
            for="radio-re"
          >
            <span
              class="navds-radio__content"
            >
              <span
                aria-hidden="true"
                class="navds-body-short navds-body-short--small"
                id="rf"
              >
                Annet
              </span>
            </span>
          </label>
        </div>
      </div>
      <div
        aria-live="polite"
        aria-relevant="additions removals"
        class="navds-fieldset__error"
        id="fieldset-error-ra"
      />
    </fieldset>
    <div
      class="stegKnapper"
    >
      <button
        class="stegKnapper__bekreft navds-button navds-button--primary navds-button--small"
      >
        <span
          class="navds-label navds-label--small"
        >
          Bekreft og fortsett
        </span>
      </button>
      <button
        class="stegKnapper__tilbake navds-button navds-button--tertiary navds-button--small"
      >
        <span
          class="navds-button__icon"
        >
          <svg
            fill="none"
            height="14"
            viewBox="0 0 16 14"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M16 7.66732L2.47 7.66732L7.33333 12.6976L6.41697 13.6673L0 7.00065L6.41697 0.333984L7.33333 1.30368L2.47 6.33398L16 6.33398V7.66732Z"
              fill="#0067C5"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="navds-label navds-label--small"
        >
          Tilbake
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`vurderingArtikkel13_2b > snapshot test dersom Norge ikke er valgt 1`] = `
<div>
  <div
    class="vurderingArtikkel13_2b"
  >
    <h1
      class="stegvelgertittel navds-heading navds-heading--large"
    >
      Vurdering av artikkel 13 nr. 2 bokstav b
    </h1>
    <fieldset
      class="navds-radio-group navds-radio-group--small navds-fieldset navds-fieldset--small"
    >
      <legend
        class="navds-fieldset__legend navds-label navds-label--small"
      >
        I hvilket land har virksomheten sitt interessesenter?
      </legend>
      <div
        class="navds-radio-buttons"
      >
        <div
          class="navds-radio navds-radio--small"
        >
          <input
            aria-labelledby="r3"
            class="navds-radio__input"
            id="radio-r2"
            name="interessesenter"
            type="radio"
            value="NORGE"
          />
          <label
            class="navds-radio__label"
            for="radio-r2"
          >
            <span
              class="navds-radio__content"
            >
              <span
                aria-hidden="true"
                class="navds-body-short navds-body-short--small"
                id="r3"
              >
                Norge
              </span>
            </span>
          </label>
        </div>
        <div
          class="navds-radio navds-radio--small"
        >
          <input
            aria-labelledby="r6"
            class="navds-radio__input"
            id="radio-r5"
            name="interessesenter"
            type="radio"
            value="ANNET"
          />
          <label
            class="navds-radio__label"
            for="radio-r5"
          >
            <span
              class="navds-radio__content"
            >
              <span
                aria-hidden="true"
                class="navds-body-short navds-body-short--small"
                id="r6"
              >
                Annet
              </span>
            </span>
          </label>
        </div>
      </div>
      <div
        aria-live="polite"
        aria-relevant="additions removals"
        class="navds-fieldset__error"
        id="fieldset-error-r1"
      />
    </fieldset>
    <div
      class="row"
    >
      <div
        class="col col-xs-8 col-md-6 col-lg-4"
      >
        <div>
          <div
            class="melosys-textfield landliste__linje__input navds-form-field navds-form-field--small"
          >
            <label
              class="navds-form-field__label navds-label navds-label--small"
              for="a2536b4b-d891-4d2d-a9ff-fd528adc9c5c"
            >
              Velg land:
            </label>
            <input
              bredde="fullbredde"
              class="navds-text-field__input navds-body-short navds-body-short--small"
              id="a2536b4b-d891-4d2d-a9ff-fd528adc9c5c"
              list="datalist-4ddaf395-f5fc-4e28-91e1-91f94bd29201"
              type="text"
              value="Kypros (CY)"
            />
            <div
              aria-live="polite"
              aria-relevant="additions removals"
              class="navds-form-field__error"
              id="textField-error-r8"
            />
          </div>
          <div
            class="landliste__dataliste"
          >
            <datalist
              id="datalist-4ddaf395-f5fc-4e28-91e1-91f94bd29201"
            >
              <option
                label="Belgia (BE)"
                value="Belgia (BE)"
              />
              <option
                label="Bulgaria (BG)"
                value="Bulgaria (BG)"
              />
              <option
                label="Danmark (DK)"
                value="Danmark (DK)"
              />
              <option
                label="Estland (EE)"
                value="Estland (EE)"
              />
              <option
                label="Finland (FI)"
                value="Finland (FI)"
              />
              <option
                label="Frankrike (FR)"
                value="Frankrike (FR)"
              />
              <option
                label="Færøyene (FO)"
                value="Færøyene (FO)"
              />
              <option
                label="Grønland (GL)"
                value="Grønland (GL)"
              />
              <option
                label="Hellas (GR)"
                value="Hellas (GR)"
              />
              <option
                label="Irland (IE)"
                value="Irland (IE)"
              />
              <option
                label="Island (IS)"
                value="Island (IS)"
              />
              <option
                label="Italia (IT)"
                value="Italia (IT)"
              />
              <option
                label="Kroatia (HR)"
                value="Kroatia (HR)"
              />
              <option
                label="Kypros (CY)"
                value="Kypros (CY)"
              />
              <option
                label="Latvia (LV)"
                value="Latvia (LV)"
              />
              <option
                label="Liechtenstein (LI)"
                value="Liechtenstein (LI)"
              />
              <option
                label="Litauen (LT)"
                value="Litauen (LT)"
              />
              <option
                label="Luxembourg (LU)"
                value="Luxembourg (LU)"
              />
              <option
                label="Malta (MT)"
                value="Malta (MT)"
              />
              <option
                label="Nederland (NL)"
                value="Nederland (NL)"
              />
              <option
                label="Norge (NO)"
                value="Norge (NO)"
              />
              <option
                label="Polen (PL)"
                value="Polen (PL)"
              />
              <option
                label="Portugal (PT)"
                value="Portugal (PT)"
              />
              <option
                label="Romania (RO)"
                value="Romania (RO)"
              />
              <option
                label="Slovakia (SK)"
                value="Slovakia (SK)"
              />
              <option
                label="Slovenia (SI)"
                value="Slovenia (SI)"
              />
              <option
                label="Spania (ES)"
                value="Spania (ES)"
              />
              <option
                label="Storbritannia (GB)"
                value="Storbritannia (GB)"
              />
              <option
                label="Svalbard og Jan Mayen (SJ)"
                value="Svalbard og Jan Mayen (SJ)"
              />
              <option
                label="Sveits (CH)"
                value="Sveits (CH)"
              />
              <option
                label="Sverige (SE)"
                value="Sverige (SE)"
              />
              <option
                label="Tsjekkia (CZ)"
                value="Tsjekkia (CZ)"
              />
              <option
                label="Tyskland (DE)"
                value="Tyskland (DE)"
              />
              <option
                label="Ungarn (HU)"
                value="Ungarn (HU)"
              />
              <option
                label="Østerrike (AT)"
                value="Østerrike (AT)"
              />
              <option
                label="Åland (AX)"
                value="Åland (AX)"
              />
            </datalist>
          </div>
        </div>
      </div>
    </div>
    <div
      class="stegKnapper"
    >
      <button
        class="stegKnapper__bekreft navds-button navds-button--primary navds-button--small"
      >
        <span
          class="navds-label navds-label--small"
        >
          Bekreft og fortsett
        </span>
      </button>
      <button
        class="stegKnapper__tilbake navds-button navds-button--tertiary navds-button--small"
      >
        <span
          class="navds-button__icon"
        >
          <svg
            fill="none"
            height="14"
            viewBox="0 0 16 14"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clip-rule="evenodd"
              d="M16 7.66732L2.47 7.66732L7.33333 12.6976L6.41697 13.6673L0 7.00065L6.41697 0.333984L7.33333 1.30368L2.47 6.33398L16 6.33398V7.66732Z"
              fill="#0067C5"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <span
          class="navds-label navds-label--small"
        >
          Tilbake
        </span>
      </button>
    </div>
  </div>
</div>
`;
